samples/_failures_safe/1761640118_f5a2b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1877c158.c: In function ‘main’:
./samples/SAFE/__tmp_1877c158.c:164:9: error: expected expression at end of input
  164 |         print_token(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_1877c158.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1877c158.c:164:9: error: expected declaration or statement at end of input
